--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "@react-navigation/stack": "^6.3.2",
     "react": "18.1.0",
     "react-native": "0.70.3",
+    "react-native-circular-progress-indicator": "^4.4.0",
     "react-native-gesture-handler": "^2.8.0",
+    "react-native-reanimated": "^2.11.0",
     "react-native-safe-area-context": "^4.4.1",
-    "react-native-screens": "^3.18.2"
+    "react-native-screens": "^3.18.2",
+    "react-native-svg": "^13.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
