--- a/package.json
+++ b/package.json
@@ -13,14 +13,20 @@
   "dependencies": {
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/stack": "^6.3.2",
+    "@tanstack/react-query": "^4.13.0",
+    "axios": "^1.1.3",
     "react": "18.1.0",
     "react-native": "0.70.3",
+    "react-native-axios": "^0.17.1",
     "react-native-circular-progress-indicator": "^4.4.0",
+    "react-native-dotenv": "^3.3.1",
+    "react-native-flash-message": "^0.3.1",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-reanimated": "^2.11.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
-    "react-native-svg": "^13.4.0"
+    "react-native-svg": "^13.4.0",
+    "react-query": "^3.39.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
